editor-components/intro-section/intro-section8/intro-section8.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
    .background {
        position: absolute;
        inset: 0;
        background-color: var(--composer-primary-color);
        clip-path: polygon(0 0, 100% 0, 100% 70%, 50% 100%, 0 70%);
        z-index: 0;
    }

    .max-content {
        position: relative;
        display: flex;
        flex-direction: column;
        gap: var(--composer-gap-lg);

        .text-content {
            .subtitle {
                margin-left: auto !important;
                margin-right: auto !important;

                &::before {
                    display: none;
                }
            }

            .title,
            .description {
                text-align: center;
            }

            .button-container {
                display: flex;
                justify-content: center;
                gap: var(--composer-gap-sm);
                flex-wrap: wrap;
                width: 100%;

                .button {
                    .button-text {
                        content: "";
                    }
                }
            }

            &.has-background {
                .subtitle {
                    padding: 0;
                    background: none;
                    color: var(--composer-font-color-secondary);

                    &::before {
                        display: none;
                    }
                }

                .title,
                .description {
                    color: var(--composer-font-color-secondary);
                }
            }
        }

        .media-wrapper {
            position: relative;
            width: 100%;
            max-width: 960px;
            aspect-ratio: 16 / 9;
            display: flex;
            justify-content: center;
            align-items: center;
            border-radius: var(--composer-border-radius-sm);
            background-color: var(--color-black);
            overflow: hidden;
            margin: 0 auto;

            .video,
            .image {
                width: 100%;
                height: 100%;
                display: block;
                object-fit: cover;
            }

            .thumbnail-container {
                position: relative;
                width: 100%;
                height: 100%;
                display: flex;
                justify-content: center;
                align-items: center;
                cursor: pointer;
                z-index: 1;

                .thumbnail-image,
                .image {
                    width: 100%;
                    height: 100%;
                    object-fit: cover;
                }

                .overlay {
                    position: absolute;
                    inset: 0;
                    background-color: var(--composer-overlay-color);
                    z-index: 2;
                    pointer-events: none;
                }
            }

            .play-icon-wrapper {
                position: absolute;
                z-index: 3;
                display: flex;
                justify-content: center;
                align-items: center;
                color: var(--composer-font-color-secondary);
                background: var(--composer-primary-color);
                padding: var(--composer-gap-md);
                border-radius: 50%;

                .play-icon {
                    display: flex;
                    font-size: 2rem;
                }
            }
        }
    }
}

@container (max-width: #{$composer-tablet-width}) {
    .container {
        .max-content {
            .media-wrapper {
                height: auto;
            }
        }
    }

    .container .background {
        clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
    }
}

@container (max-width: #{$composer-phone-width}) {
    .container {
        .max-content {
            .media-wrapper {
                aspect-ratio: 16 / 22;

                .play-icon-wrapper {
                    padding: calc(var(--composer-gap-xs) * 3);

                    .play-icon {
                        font-size: 1.5rem;
                    }
                }
            }
        }
    }
}

