fix: When alignment set left and subtitle type set line, subtitle should be positioned center.

--- a/editor-components/intro-section/intro-section8/intro-section8.module.scss
+++ b/editor-components/intro-section/intro-section8/intro-section8.module.scss
@@ -17,8 +17,9 @@
 
         .text-content {
             .subtitle {
-                margin-left: auto !important;
-                margin-right: auto !important;
+                margin-left: auto;
+                margin-right: auto;
+                transform: none;
 
                 &::before {
                     display: none;
